# internal/identities/configurations/endpoint_configurations.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/labstack/echo/v4"
 	authenticate "github.com/tguankheng016/golang-ecommerce-monolith/internal/identities/accounts/features/authenticating/v1/endpoints"
+	refreshToken "github.com/tguankheng016/golang-ecommerce-monolith/internal/identities/accounts/features/refreshing_token/v1/endpoints"
 	getting_users "github.com/tguankheng016/golang-ecommerce-monolith/internal/identities/users/features/getting_users/v1/endpoints"
 	"github.com/tguankheng016/golang-ecommerce-monolith/internal/pkg/jwt"
 	"github.com/tguankheng016/golang-ecommerce-monolith/internal/pkg/logger"
@@ -21,4 +22,5 @@ func ConfigEndpoints(
 ) {
 	getting_users.MapRoute(db, jwtTokenValidator, log, echo, ctx)
 	authenticate.MapRoute(db, jwtTokenGenerator, log, echo, ctx)
+	refreshToken.MapRoute(db, jwtTokenGenerator, jwtTokenValidator, log, echo, ctx)
 }
